fixed nav with collapsed menu at smaller widths, #3

--- a/app/stylus/components/base.styl
+++ b/app/stylus/components/base.styl
@@ -69,12 +69,12 @@ section > ul
     background: $grey-light
     text-align: left
 
-  @media screen and (max-width: $small-width)
+  @media screen and (max-width: $medium-width)
 
     & > .column
       width: 100%
 
-  @media screen and (min-width: $small-width + 1px)
+  @media screen and (min-width: $medium-width + 1px)
 
     & > .column
       width: 48%
