--- a/app/stylus/globals/variables.styl
+++ b/app/stylus/globals/variables.styl
@@ -47,3 +47,12 @@ transition(args)
   -webkit-transition: args
   -moz-transition: args
   transition: args
+
+// Center content vertically
+
+centerVert =
+  position: absolute
+  top: 50%
+  -webkit-transform: translateY(-50%)
+  -moz-transform: translateY(-50%)
+  transform: translateY(-50%)
