--- a/app/stylus/sections/hero.styl
+++ b/app/stylus/sections/hero.styl
@@ -2,31 +2,16 @@
 
 .hero
   min-height: 650px
+  padding-top: 80px
   padding-bottom: 20px
   background: url(../images/hero-san-francisco.jpg) no-repeat center bottom
   background-size: cover
   color: white
 
-  .nav-main
-    padding: 15px 30px
-    // border-top: 6px solid $orange
-    text-align: right
-    font-weight: $font-weight-bold
-
-    a
-      margin-left: 15px
-      display: inline-block
-      color: white
-
-      &.home
-        margin-left: 0
-        float: left
-
   h2
     font-style: italic
 
   .container
-    margin-top: 60px
     position: relative
 
   .date
